web/custom.css
 /* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #2196F3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

/* Styling for button that allows toggling layers on and off */
#layerButton {
    position: absolute;
    z-index: 1;
    top: 350px;
    right: 10px;
}

/* this is so bad, should make it into a plugin for mapbox gl js library */
@media only screen and (max-width: 700px) {
  #layerButton {
    top: 450px;
  }
}

@media only screen and (min-width: 700px) and (max-width: 730px) {
  #layerButton {
    top: 420px;
  }
}

@media only screen and (min-width: 730px) and (max-width: 880px) {
  #layerButton {
    top: 370px;
  }
}

@media only screen and (min-width: 880px) {
  #layerButton {
    top: 350px;
  }
}

/* for md */

.custom-switch.custom-switch-md .custom-control-label {
  padding-left: 1rem;
  padding-bottom: 0.75rem;
}

.custom-switch.custom-switch-md .custom-control-label::before {
  height: 1.5rem;
  width: calc(2rem + 0.75rem);
  border-radius: 3rem;
}

.custom-switch.custom-switch-md .custom-control-label::after {
  width: calc(1.5rem - 4px);
  height: calc(1.5rem - 4px);
  border-radius: calc(2rem - (1.5rem / 2));
}

.custom-switch.custom-switch-md .custom-control-input:checked ~ .custom-control-label::after {
  transform: translateX(calc(1.5rem - 0.25rem));
}

